--- a/vignettes/predictions_simple_ddm.Rmd
+++ b/vignettes/predictions_simple_ddm.Rmd
@@ -16,24 +16,58 @@ library(dRiftDM)
 set.seed(1014)
 ```
 
-We can create the classical (Ratcliff) DDM, which is pre-built in `dRiftDM`, in its simplest version using the function `ratcliff_dm()`. To increase speed we set medium discretization settings:
+In this vignette, we explore how the core parameters of the drift diffusion model influence mean RTs and accuracy.
+
+We can create the classical (Ratcliff) DDM, which is pre-built in `dRiftDM`, in its simplest version using the function `ratcliff_dm()`:
+
 ```{r}
-model <- ratcliff_dm(dx = .005, dt = .005, t_max = 1.5)
+model <- ratcliff_dm()
 ```
+
 To access the parameter settings, we can use the `coef()` method:
+
 ```{r}
 coef(model)
 ```
+
 Here, we can see the core parameters of the classical DDM and their current values: the drift rate `muc` is 3.0, the boundary `b` is 0.6, and the non-decision time `non_dec` is 0.3 (seconds). We can alter the parameter settings like this:
+
 ```{r}
 coef(model)["muc"] <- 2.5
 coef(model)["b"] <- 0.5
 coef(model)
 ```
-To derive model predictions for basic response times (RTs) and accuracy, we can use the `calc_stats()` method and the argument `type = "basic_stats"`:
+To visualize the model, we can simulate some evidence accumulation trajectories, using the function `simulate_traces()` and the generic `plot()` method.
+
 ```{r}
+set.seed(1)
+traces <- simulate_traces(model, k = 10)
+plot(traces, col = "black")
+```
+
+You might wonder why these trajectories appear so "coarse." This results from the discretization settings of the underlying solver that computes the first-passage times when fitting the model. To obtain a smoother plot, we can temporarily increase the resolution in the time domain:
+
+```{r}
+prms_solve(model)["dt"] = .001 # set to 1 ms step size (for a nice plot)
+set.seed(1)
+traces <- simulate_traces(model, k = 10)
+plot(traces, col = "black")
+```
+
+Sometimes, we might want to visualize the model without noise. In this case, the argument `sigma` of the `simulate_traces()` function comes in handy.
+
+```{r}
+traces <- simulate_traces(model, k = 1, sigma = 0)
+plot(traces, col = "black")
+```
+
+To derive basic model predictions for mean response times (RTs) and accuracy, we can use the `calc_stats()` method and the argument `type = "basic_stats"`:
+
+```{r}
+prms_solve(model)["dt"] = .010 # set it back to a 10 ms step size (for speed)
 calc_stats(model, type = "basic_stats")
 ```
+
 Note that the mean predicted RTs for correct and incorrect responses are actually identical for the classical Ratcliff DDM! This hold as long as the model doesn't include trial-by-trial variability in the starting point or drift rate. Once we incorprate the respective variability parameters, we produce fast and slow errors, respectively. 
 
 Let's illustrates the effects of each parameter on predicted mean correct RTs and accuracy by systematically varying each parameter one after the other. For this example demonstration, let's use the following parameter ranges:
