- minor bug fixes - ensure t_max/dt/dx consistency - ensure no mass at starting point extremes - starting values - better docu - vignettes re-built - default model uses mu_dummy

--- a/vignettes/REFERENCES.bib
+++ b/vignettes/REFERENCES.bib
@@ -64,3 +64,28 @@
   publisher={Springer}
 }
 
+
+@article{WilsonCollins2019,
+  title={Ten simple rules for the computational modeling of behavioral data},
+  author={Wilson, Robert C and Collins, Anne GE},
+  journal={eLife},
+  volume={8},
+  pages={e49547},
+  year={2019},
+  publisher={eLife Sciences Publications, Ltd},
+  doi={10.7554/eLife.49547}
+}
+
+
+@incollection{Vandekerckhove2015book,
+  author={Vandekerckhove, Joachim and Matzke, Dora and Wagenmakers, Eric-Jan},
+  title={Model Comparison and the Principle of Parsimony},
+    booktitle = {The Oxford Handbook of Computational and Mathematical Psychology},
+  editor    = {Busemeyer, J. R., Wang, Z., Townsend, J.,  Eidels, A.},
+  publisher = {Oxford University Press},
+  year      = {2015},
+  pages     = {300--319},
+  doi       = {10.1093/oxfordhb/9780199957996.013.14},
+}
+
+
